--- a/case-converter.html
+++ b/case-converter.html
@@ -287,7 +287,7 @@
         function toSentenceCase(text) {
             return text
                 .toLowerCase()
-                .replace(/(^\s*[a-z])|([.!?]\s+[a-z])/g, match => match.toUpperCase());
+                .replace(/(^\s*[a-z])|([.!?]\s+[a-z])/gm, match => match.toUpperCase());
         }
 
         function splitWords(text) {
